--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <p class="attention-getter" data-animate-el>
                                 Motivated and detail-oriented Information Technology graduate with experience in administrative support, data entry, and technical maintenance. Proven ability to manage financial records, provide virtual assistance, and deliver accurate and timely documentation. Seeking a long-term remote position as a Virtual Assistant or Data Encoder where I can apply my organizational and technical skills to contribute to business efficiency and success.
                             </p>
-                            <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="https://drive.google.com/file/d/1rchAYpQX62dWEJjPPgP7z9Cm3rRMbeQt/view?usp=drive_link" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
